# genome-spy

./: .dependency-cruiser.js  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc  .prettierrc.json  .travis.yml  AGENTS.md  AGGREGATED_SAMPLE_ACTIONS.md  APP_DOC_EMBED_PLAN.md  ARCHITECTURE.md  ARROW_PLAN.md  AXIS_EXTENT_PLAN.md  AXIS_PLAN.md  BAM_ALIGNMENT_PLAN.md  BUNDLE_TRIMMING_PLAN.md  CHANGELOG.md  CHROME_OVERLAY_REFACTOR_PLAN.md  CITATION.cff  CONFIGURABLE_VISIBILITY_APP_REFACTOR_PLAN.md  CONFIG_PLAN.md  CONTRIBUTING.md  CULLING_PLAN.md  DATASET-PLAN.md  DOMAIN_EXPRREF_PLAN.md  DOMAIN_NOTIFICATION_PLAN.md  ENCODER_FIX_PLAN.md  ERGONOMIC_SEMANTIC_ZOOM.md  EVENT_REFACTOR_PLAN.md  EXAMPLES_PLAN.md  EXPR_DYNAMIC_OPACITY_PLAN.md  FACET_PLAN.md  FEATURE_FILTERED_INTERVAL_AGGREGATION_PLAN.md  FIX_CLIPPING_PLAN.md  GROUP_ACTIONS_PLAN.md  INITIAL_LINKED_DOMAIN_PLAN.md  INSIDE_AXIS_PLAN.md  INSPECTOR_PLAN.md  JOIN_PLAN.md  LAZY_SUBTREE_INITIALIZATION.md  (+53 more)
__mocks__/: fileMock.js
custom_theme/: main.html
docs/: .markdownlint.yaml  TODO.md  api.md  concepts.md  coordinate-system.md  genomic-data.md  getting-started.md  index.md  intro.md  license.md  line_charts.md  multiple-samples.md  quickstart.md  schema.json  tracks.md
examples/: README.md
external-typings/: README.md  filetypes.d.ts  internmap.d.ts  vega-loader.d.ts  vega-scale.d.ts
utils/agent_server/: AGENTS.md  DGX_VLLM_SETUP.md  README.md  pyproject.toml
utils/agent_server/PLANS/: TOKEN_DEBUGGER_LOG_FORMAT_PLAN.md  TOKEN_DEBUGGER_PLAN.md
utils/agent_server/app/: __init__.py  config.py  main.py  models.py  prompt_builder.py  providers.py  token_debugger.py  tool_catalog.py
utils/agent_server/app/prompts/: genomespy_system_prompt.md
utils/agent_server/app/providers/: openai_responses.py  streaming.py
utils/agent_server/tests/: test_auth_logging.py  test_main.py  test_prompt_builder.py  test_provider_parser.py  test_token_debugger.py  test_tool_catalog.py
utils/markdown_extension/: README.md  pyproject.toml  setup.py
utils/markdown_extension/extension/: example_gallery.py  extension.py
utils/markdown_extension/tests/: test_example_gallery.py  test_example_macro.py  test_extension_gallery.py
(+517 files in other folders)
