[project]
name = "genome-spy-docs"
version = "0.0.0"
description = "Documentation tooling for the GenomeSpy monorepo"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
docs = [
    "genomespy-extension",
    "markdown",
    "mdx-truly-sane-lists",
    "pymdown-extensions",
    "zensical",
]

[tool.uv.sources]
genomespy-extension = { path = "utils/markdown_extension", editable = true }
